# endgame-postprocessing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
endgame-postprocessing/post_processing/: measures.py
endgame_postprocessing/model_wrappers/: constants.py
endgame_postprocessing/post_processing/: aggregation.py  canoncical_columns.py  canonical_columns.py  canonical_file_name.py  canonical_results.py  canonicalise.py  combine_historic_and_forward.py  composite_run.py  constants.py  custom_file_info.py  dataclasses.py  disease.py  endemicity_classification.py  file_util.py  generation_metadata.py  iu_aggregates.py  iu_data.py  iu_data_fixup.py  measures.py  output_directory_structure.py  pipeline.py  pipeline_config.py  replicate_historic_data_from_scenario.py  single_file_post_processing.py  warnings_collector.py
misc/pp_mixed_scenarios/: Dockerfile  README.md  exceptions.py  post_process_mixed_scenarios.py
model_wrappers/lf/: testRun.py
model_wrappers/oncho/: testRun.py
post-processing-code/general-functions/: aggregation.py  general_post_processing.py
post-processing-code/lf/: testRun.py
post-processing-code/oncho/: testRun.py
post_processing/: aggregation.py  constants.py  single_file_post_processing.py
post_processing_code/: constants.py
post_processing_code/general_functions/: aggregation.py  general_post_processing.py
post_processing_code/lf/: testRun.py
post_processing_code/oncho/: testRun.py
template-formats/: README.md  continent_measures.csv  country_measures.csv  iu_measures.csv
template-formats/prevalance-visualisation-format/: iu_metadata.csv
template-formats/standardised-model-output/: model_run.csv  simulation_measures.csv
tests/: test_endemicity_classification.py  test_helper_functions.py  test_measures.py  test_single_file_post_processing.py
tests/end_to_end/: .gitignore  (+2 more)
(+276 files in other folders)
