[tool.poetry]
name = "endgame-postprocessing"
version = "0.1.0"
description = ""
authors = ["NTD-Modelling-Consortium <todo>"]

[tool.poetry.dependencies]
python = ">=3.10"
tqdm = "^4.64.1"
numpy = "^1.22.3"   
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
isort = ">=5.11, <6.0"
autoflake = ">=2.0.0, <3.0"
ruff = "^0.5.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F"]

[tool.poetry.scripts]
ruff-lint = "ruff:main"